--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: var(--surface-0);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.topbar {
+  height: 50px;
+  background-color: var(--indigo-900);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.fc .fc-daygrid-day-frame {
+  position: relative;
+  min-height: 100px !important;
+}
+
+.fc .fc-daygrid-day.fc-day-today{
+  background-color: var(--blue-100);
+}
+
+
+
+.datatable-crud-demo .table-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@media screen and (max-width: 960px) {
+  .datatable-crud-demo .table-header {
+      align-items: flex-start;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.datatable-crud-demo .product-image {
+  width: 100px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+.datatable-crud-demo .p-dialog .product-image {
+  width: 150px;
+  margin: 0 auto 2rem auto;
+  display: block;
+}
+.datatable-crud-demo .confirmation-content {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 960px) {
+  .datatable-crud-demo .p-toolbar {
+      flex-wrap: wrap;
   }
-  to {
-    transform: rotate(360deg);
+  .datatable-crud-demo .p-toolbar .p-button {
+      margin-bottom: 0.25rem;
+  }
+  .datatable-crud-demo .table-header {
+      flex-direction: column;
+  }
+  .datatable-crud-demo .table-header .p-input-icon-left, .datatable-crud-demo .table-header input {
+      width: 100%;
   }
 }
+                        
